--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html,
-body {
-    overflow-x: hidden;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+body,
+#root {
+    height: auto;
+    min-height: 100%;
+    overflow-y: auto;
 }
